# hardware-api

./: .code-workspace  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yaml  hardware-api.code-workspace  justfile  snapcraft.yaml
.github/: pull_request_template.md  zizmor.yml
.workshop/: dev.yaml
client/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  hwctl.1  justfile  pyproject.toml  rust-toolchain.toml  snapcraft.yaml  tox.ini
client/cli/: Cargo.toml
client/cli/src/: main.rs
client/debian/: README.Debian  README.source  changelog  control  copyright  generate_checksums.py  hwctl.manpages  hwlib.cron.d.ex  hwlib.doc-base.ex  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  usr.bin.hwctl  vendor-rust.sh  watch.ex
client/debian/tests/: control  mock_server.py  run-hwctl-tests.sh
client/hictl/: Cargo.toml
client/hictl/src/: main.rs
client/hilib/: Cargo.toml
client/hilib/src/: lib.rs
client/hwctl/: Cargo.toml
client/hwctl/src/: main.rs
client/hwlib/: Cargo.toml  build.rs  tox.ini
client/hwlib/debian/: README.source  changelog  config.toml  control  copyright  generate_checksums.py  rules  vendor-rust.sh  watch
client/hwlib/debian/tests/: control  run-tests.sh
client/hwlib/pytests/: test_cert_status.py
client/hwlib/src/: constants.rs  helpers.rs  lib.rs  py_bindings.rs  utils.rs
client/hwlib/src/builders/: mod.rs  request_builders.rs
client/hwlib/src/collector/: cpuid.rs  cpuinfo.rs  hw_info.rs  main.rs  mod.rs
client/hwlib/src/collectors/: cpuid.rs  cpuinfo.rs  hardware_info.rs  hw_info.rs  main.rs  mod.rs  os_info.rs
client/hwlib/src/models/: devices.rs  mod.rs  rbody.rs  request_validators.rs  response_validators.rs  software.rs
client/hwlib/test_data/: README.md
client/hwlib/test_data/amd64/dell_xps13/: DMI  os-release  request.json  version
client/hwlib/test_data/amd64/dgx_station/: DMI  expected.json  os-release  request.json  response.json  smbios_entry_point  version
client/hwlib/test_data/amd64/generic/: expected.json
client/hwlib/test_data/amd64/thinkstation_p620/: os-release  request.json  response.json  smbios_entry_point  version
client/hwlib/test_data/arm64/rpi4b8g/: cpuinfo  version
client/hwlib/tests/: test_cert_status.rs
client/hwlib/tests/test_data/: DMI  cpuinfo  smbios_entry_point  version
client/hwlib/tests/test_data/device-tree/: compatible  model
client/lib/: Cargo.toml
client/lib/src/: lib.rs
client/snap/hooks/: configure
client/src/: cache.rs  constants.rs  helpers.rs  lib.rs  py_bindings.rs
client/src/collectors/: mod.rs  os_info.rs
client/src/models/: devices.rs  request_validators.rs  response_validators.rs  software.rs
client/test_data/amd64/dell_xps13/: request.json  response.json  smbios_entry_point
client/test_data/amd64/dgx_station/: os-release  response.json
client/test_data/amd64/questing_vm/: DMI  smbios_entry_point
client/test_data/amd64/thinkstation_p620/: DMI  cpuinfo_max_freq  request.json  response.json
client/test_data/arm64/rpi4b8g/: cpuinfo
client/test_data/arm64/rpi4b8g/device-tree/: compatible  model
client/test_utils/: certification_emulator.py
debian/: cargo-checksum.json  changelog  control  copyright  watch
docs/: .custom_wordlist.txt  .pre-commit-config.yaml  Makefile  conf.py  index.rst  justfile
integration-tests/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
integration-tests/src/: integration_test.rs
server/: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  justfile  openapi.json  openapi.yaml  pyproject.toml  tox.ini
server/charm/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  charmcraft.yaml  concierge.yaml  justfile  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
server/charm/src/: charm.py  config.py
server/charm/tests/integration/: conftest.py  helpers.py  test_charm.py  test_ingress.py  test_nginx.py  test_traefik.py
server/charm/tests/unit/: __init__.py  conftest.py  test_charm.py
server/data/: init_db.py
server/hi_api/: main.py  router.py
server/hi_api/data_models/: enums.py  models_dto.py
server/hi_api/endpoints/: certification.py  hardware.py  response_dto.py
server/hiapi/: router.py
server/hwapi/: main.py  router.py
server/hwapi/data_models/: enums.py  models.py  models_dto.py  repository.py  setup.py
server/hwapi/data_models/data_validators/: __init__.py  devices.py  software.py
server/hwapi/endpoints/: certification.py  decorators.py  response_dto.py
server/hwapi/endpoints/certification/: certification.py  logic.py  rbody_dto.py  rbody_validators.py  request_validators.py  response_builders.py  response_validators.py
server/hwapi/endpoints/importers/: importers.py
server/schemas/: openapi.html  openapi.yaml
server/scripts/: dev-docker-entrypoint.sh  generate_openapi_schema.py  import_from_c3.py  import_test_data.py  import_test_data_from_c3.py  init_db.py  seed_db.py  update_db.py
server/scripts/c3_test_data/: cpuids.json  public_certificates.json  public_devices.json
server/src/hwapi/: main.py  router.py
server/src/hwapi/data_models/: enums.py  models.py  repository.py  setup.py
server/src/hwapi/data_models/data_validators/: devices.py  software.py
server/src/hwapi/endpoints/certification/: certification.py  logic.py  response_builders.py  response_validators.py
server/terraform/: .gitignore  .terraform.lock.hcl  README.md  hardware-api.tf  outputs.tf  terraform.tfstate  variables.tf
server/terraform/charm/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
server/terraform/product/: README.md  main.tf  outputs.tf  terraform.tf  variables.tf  versions.tf
server/tests/: conftest.py  data_generator.py
server/tests/endpoints/certification/: test_certification.py  test_certified_response.py  test_partially_certified_response.py
server/tests/endpoints/importers/: test_importers.py
(+56 files in other folders)
