[workspace]
members = ["hwctl", "hwlib"]
resolver = "2"

[workspace.package]
version = "0.9.2"
edition = "2021"
authors = [
    "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>",
    "Nadzeya Hutsko <nadzeya.hutsko@canonical.com>",
    "Matias Piipari <matias.piipari@canonical.com>",
]
documentation = "https://github.com/canonical/hardware-api/"
homepage = "https://github.com/canonical/hardware-api/"
repository = "https://github.com/canonical/hardware-api/"

[workspace.dependencies]
anyhow = "~1.0.0"
serde_json = "~1.0.0"
