[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
hwlib = { path = "client/hwlib" }
tokio = { version = "1.0", features = ["full", "test-util"] }
anyhow = "1.0"
simple_test_case = "1.2.0"
serde_json = "1.0.0"

[[test]]
name = "integration"
path = "src/integration_test.rs"
