[project]
name = "hwapi"
version = "0.1.0"
description = "API server for working with hardware information from C3"
authors = []
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.121,<1",
    "pydantic>=2.5,<3",
    "pyyaml>=6.0,<7",
    "requests>=2.32,<3",
    "sqlalchemy>=2.0,<3",
    "starlette>=0.49,<1",
    "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "types-pyyaml",
    "types-requests",
    "pytest",
    "pytest-cov",
    "requests-mock",
    "httpx",
    "sqlalchemy-utils",
]

[tool.ruff]
lint.extend-select = [
    "FAST", # fastapi
    "A",    # flake8-builtins
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "B",    # flake8-bugbear
    "I",    # isort
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**.py" = ["S101"]

[build-system]
requires = ["uv-build>=0.9,<1"]
build-backend = "uv_build"
