[tool.poetry]
name = "hwapi"
version = "0.1.0"
description = "API server for working with hardware information from C3"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.5.0"
pyyaml = "^6.0.1"
requests = "^2.32.4"
starlette = "^0.49.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
mypy = "^1.8.0"
types-pyyaml = "^6.0.0"
pre-commit = "^4.0.0"
types-requests = "^2.31.0.20240406"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
httpx = "^0.28.0"
sqlalchemy-utils = "^0.41.2"
requests-mock = "^1.12.1"
pytest-cov = "^6.0.0"

[tool.ruff]
lint.extend-select = [
    "FAST", # fastapi
    "A",    # flake8-builtins
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "B",    # flake8-bugbear
    "I",    # isort
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**.py" = ["S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
