[package]
name = "hwctl"
description = "hwlib backed CLI tool for collecting and sending hardware information to hwapi to find testing status of device models"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.vendor-filter]
platforms = ["*-unknown-linux-gnu"]
tier = "2"
all-features = false

[target.'cfg(target_os = "linux")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
hwlib = { path = "../hwlib" }
serde_json = { workspace = true }
anyhow = { workspace = true }
