[package]
name = "hwctl"
description = "CLI tool to check hardware certification status"
license = "GPL-3.0-only"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.vendor-filter]
platforms = ["*-unknown-linux-gnu"]
tier = "2"
all-features = false

[target.'cfg(target_os = "linux")'.dependencies]
hwlib = { path = "../hwlib" }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
