[package]
name = "hwlib"
description = "Collects and sends hardware information to hwapi to find testing status of the device model"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
exclude = ["debian/*"]

[lib]
name = "hwlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
os-release = { version = "0.1.0" }
serde_json = { workspace = true }
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "~1.0.0", features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "test-util"] }
pyo3 = { version = "0.25.0", features = ["extension-module"] }
smbios-lib = "0.9.0"
regex = "1.10.0"
time = { version = "~0.3.0", features = ["macros", "parsing", "formatting"] }
anyhow = { workspace = true }
itertools = "0.14.0"
lazy_static = "1.5.0"

[dev-dependencies]
simple_test_case = "1.2.0"
pretty_assertions = "1.4.1"

[package.metadata.deb]
maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
copyright = "Copyright 2024 Canonical Ltd."
