[package]
name = "hwlib"
description = "Collects and sends hardware information to hwapi to find testing status of the device model"
license = "LGPL-3.0-only"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hwlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
os-release = { version = "0.1.0" }
serde_json = { workspace = true }
ureq = { version = "3.0", features = ["json", "native-tls"], default-features = false }
serde = { version = "~1.0.0", features = ["derive"] }
pyo3 = { version = "0.25.0", features = ["extension-module"] }
smbios-lib = "0.9.0"
anyhow = { workspace = true }

[dev-dependencies]
simple_test_case = "1.2.0"
pretty_assertions = "1.4.1"

[package.metadata.deb]
maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
copyright = "Copyright 2024 Canonical Ltd."
