[package]
name = "hwlib"
description = "Collects and sends hardware information to hwapi to find testing status of the device model"
license = "LGPL-3.0-only"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hwlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
minreq = { version = "2.14.0", features = ["native-tls", "json-using-serde"], default-features = false }
os-release = { version = "0.1.0" }
pyo3 = { version = "0.25.0", features = ["extension-module"] }
serde = { version = "~1.0.0", features = ["derive"] }
serde_json = { workspace = true }
smbios-lib = "0.9.0"

[dev-dependencies]
simple_test_case = "1.2.0"
pretty_assertions = "1.4.1"

[package.metadata.deb]
maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
copyright = "Copyright 2024 Canonical Ltd."
